--- a/src/comp/PlayGame.css
+++ b/src/comp/PlayGame.css
@@ -49,7 +49,7 @@ html, body, #root {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    cursor: crosshair;
+    cursor: url('/asset/aim.png') 16 16, crosshair; 
   }
   
   .background {
@@ -130,17 +130,30 @@ html, body, #root {
   }
   
   .game-over-screen button {
-    background-color: #4CAF50;
     color: white;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
     font-size: 16px;
+    margin-top: 10px;
   }
   
-  .game-over-screen button:hover {
-    background-color: #45a049;
+  .btn-back-to-home {
+    background-color: #007BFF; /* Warna biru untuk tombol 'Back to Home' */
+  }
+  
+  .btn-back-to-home:hover {
+    background-color: #0056b3;
+  }
+  
+  .btn-play-again {
+    margin-left: 5px;
+    background-color: #FF5733; /* Warna merah/orange untuk tombol 'Play Again' */
+  }
+  
+  .btn-play-again:hover {
+    background-color: #e64a19;
   }
   
   /* Container leaderboard */
